--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
