--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.6.0",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
